--- a/anju.html
+++ b/anju.html
@@ -62,7 +62,7 @@ color: white;
 <body style="background-image:url(assets/img/backfile.jpg)">
 
 
-  <img src="assets/img/anju.jpg" height="200px" width="200px">
+  <img src="assets/img/anju1.jpg" height="200px" width="200px">
    <h1>ANJU GOJA</h1>
    <div class="decoration-line">
 
