--- a/deeoika.html
+++ b/deeoika.html
@@ -61,7 +61,7 @@ color: white;
 <body style="background-image:url(assets/img/backfile.jpg)">
 
 
-  <img src="assets/img/deepika.jpg" height="200px" width="200px">
+  <img src="assets/img/deepika1.jpg" height="200px" width="200px">
    <h1>DEEPIKA</h1>
    <div class="decoration-line">
 
