--- a/index.html
+++ b/index.html
@@ -11,6 +11,45 @@
 
 </head>
 <body >
+
+  <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+          <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header page-scroll">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                      <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                  </button>
+                  <a class="navbar-brand page-scroll" href="#head">GNI-Mullana</a>
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                      <li class="hidden">
+                          <a href="#page-top"></a>
+                      </li>
+                      <li>
+                          <a class="page-scroll" href="#about">ABOUT-STUDENTS</a>
+                      </li>
+                      <li>
+                          <a class="page-scroll" href="#leader">TEAM-LEADER</a>
+                      </li>
+                      <li>
+                          <a class="page-scroll" href="#team">TEAM-MEMBERS</a>
+                      </li>
+
+
+
+                  </ul>
+              </div>
+              <!-- /.navbar-collapse -->
+          </div>
+          <!-- /.container-fluid -->
+      </nav>
+
+<section id="head">
+
+
   <header>
     <center>
 
@@ -18,10 +57,15 @@
     <img src="assets/img/gni123.jpg"  width="80%" height="75%">
     </center>
   </header>
+  </section>
+  <section id="about">
+
+
   <h1>Portfolio of B.Tech,CSE,Group-A2 Students</h1>
 
   <section id="clone1">
     <div class="col-md-6">
+        <img src="assets/img/anmol.jpg" height="150px" width="150px">
       <h2>Anmol kapoor</h2>
 
 
@@ -30,6 +74,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/kajal.jpg" height="150px" width="150px">
       <h2>Kajal Joshi</h2>
 
       <a href="kajal.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -42,12 +87,14 @@
 
   <section id="clone2">
     <div class="col-md-6">
+      <img src="assets/img/chiranjeev.jpg" height="150px" width="150px">
       <h2>Chiranjeev Neog</h2>
 
       <a href="chiranjeev.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/dibyajyoti.jpg" height="150px" width="150px">
       <h2>Dibyajyoti Dutta</h2>
 
       <a href="dibyajyoti.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -61,12 +108,14 @@
 
   <section id="clone3">
     <div class="col-md-6">
-      <h2>Sabha</h2>
+      <img src="assets/img/sabha.jpg" height="150px" width="150px">
+      <h2>Sabha Sharma</h2>
 
       <a href="sabha.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/sakambala.jpg" height="150px" width="150px">
       <h2>Sakshi Dhiman</h2>
 
       <a href="sakshidhiman.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -83,12 +132,14 @@
 
   <section id="clone4">
     <div class="col-md-6">
+      <img src="assets/img/sakjammu.jpg" height="150px" width="150px">
       <h2>Sakshi Sharma</h2>
 
       <a href="sakshisharma.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/pankaj.jpg" height="150px" width="150px">
       <h2>Pankaj Yadav</h2>
 
       <a href="pankaj.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -104,6 +155,7 @@
 
   <section id="clone5">
     <div class="col-md-6">
+      <img src="assets/img/parm.jpg" height="150px" width="150px">
       <h2>Parminder Singh</h2>
 
       <a href="parminder.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -111,6 +163,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/pulkit1.jpg" height="150px" width="150px">
       <h2>Pulkit Sharma</h2>
 
       <a href="pulkit.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -124,6 +177,7 @@
 
   <section id="clone6">
     <div class="col-md-6">
+      <img src="assets/img/yogesh.jpg" height="150px" width="150px">
       <h2>Yogesh Manchanda</h2>
 
       <a href="yogesh.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -131,6 +185,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/shubham.jpg" height="150px" width="150px">
       <h2>Shubham pandhi</h2>
 
       <a href="shubham.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -146,6 +201,7 @@
 
   <section id="clone7">
     <div class="col-md-6">
+      <img src="assets/img/simi3.jpg" height="150px" width="150px">
       <h2>Simran Bindal</h2>
 
       <a href="073.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -153,6 +209,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/chanchal.jpg" height="150px" width="150px">
       <h2>Chanchal Bhalla</h2>
 
       <a href="chanchal.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -167,6 +224,7 @@
 
   <section id="clone8">
     <div class="col-md-6">
+      <img src="assets/img/karan.jpg" height="150px" width="150px">
       <h2>Karan Bonkra</h2>
 
       <a href="karan.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -174,6 +232,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/swapnil.jpg" height="150px" width="150px">
       <h2>Swapnil Chauhan</h2>
 
       <a href="swopnil.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -188,6 +247,7 @@
 
   <section id="clone9">
     <div class="col-md-6">
+      <img src="assets/img/shivam.jpg" height="150px" width="150px">
       <h2>Shivam Gupta</h2>
 
       <a href="shivam.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -195,7 +255,9 @@
 
     </div>
     <div class="col-md-6">
-      <h2>Deepika</h2>
+      <img src="assets/img/deepika1.jpg" height="150px" width="150px">
+      <h2>Deepika sambyal</h2>
+
 
       <a href="deeoika.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
 
@@ -212,6 +274,7 @@
 
 
     <div class="col-md-6">
+      <img src="assets/img/anju1.jpg" height="150px" width="150px">
       <h2>Anju Goja</h2>
 
       <a href="anju.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -219,6 +282,7 @@
 
     </div>
     <div class="col-md-6">
+      <img src="assets/img/sadhavi1.jpg" height="150px" width="150px">
       <h2>Sadhavi Bhat</h2>
 
       <a href="sadhavi.html" class="btn btn-primary btn-lg active" role="button">more-details</a>
@@ -229,6 +293,7 @@
     </div>
   </div>
   </section>
+</section>
   <section id="leader">
     <div class="row">
       <center>
@@ -239,10 +304,17 @@
             <div class="d-line"> </div> &#9856<div class="d-line">    </div>
 
         </div>
-        <img src="assets/img/simi3.jpg" height="150px" width="150px">
+        <img src="assets/img/simi22.jpg" height="170px" width="170px">
 
       <a href="073.html">  <h3>Simran Bindal</h3></a>
-        <p></p>
+
+                <div class="social-icons">
+                <a href="https://www.facebook.com/simi.bindal.28"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox"><i class="fa fa-google-plus-square" aria-hidden="true"></i>
+      </a>
+
+                   </div>
+
 
       </center>
     </div>
@@ -261,33 +333,88 @@
 
       </Center>
       <div class="col-md-4">
-          <img src="assets/img/anju.jpg" height="150px" width="150px">
+          <img src="assets/img/anju1.jpg" height="150px" width="150px">
           <h3>Anju Goja</h3>
-          <p>Anju,collects images from all the students and help the group leader in styling part of this web page.she is very determinant to her work</p>
-      </div>
+          <p>Anju,collects images from all the students and help the group leader in styling part of this web page.</p>
+<center>
+
+
+                    <div class="social-icons">
+                    <a href="https://www.facebook.com/anju.goja"><i class="fa fa-facebook-square"></i></a>
+                    <a href="https://www.gmail.com"><i class="fa fa-google-plus-square" aria-hidden="true"></i>
+</a>
+
+                       </div>
+</center>
+          </div>
       <div class="col-md-4">
         <img src="assets/img/kajal.jpg" height="150px" width="150px">
           <h3>Kajal Joshi</h3>
           <p>kajal,combines all the information together and discuss with students about there future plans</p>
 
 
+<center>
+
+
+
+          <div class="social-icons">
+          <a href="https://www.facebook.com/kajal.joshi.polu"><i class="fa fa-facebook-square"></i></a>
+          <a href="https://www.gmail.com"><i class="fa fa-google-plus-square" aria-hidden="true"></i>
+</a>
+
+             </div>
+</center>
     </div>
     <div class="col-md-4">
         <img src="assets/img/karan.jpg" height="150px" width="150px">
         <h3>Karan Bonkra</h3>
         <p> karan,help in making this web page and he form the dtabase of information of students </p>
+<center>
+
+
+                  <div class="social-icons">
+                  <a href="https://www.facebook.com/karan.bonkra"><i class="fa fa-facebook-square"></i></a>
+
+
+
+                  <a href="https://www.gmail.com"><i class="fa fa-google-plus-square" aria-hidden="true"></i>
+</a>
+
+                     </div>
+                   </center>
   </section>
+
   <footer>
 
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <span class="copyright" >Copyright &copy; GNI Mullana 2017</span>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://www.facebook.com/GNI.Ambala/"><i class="fa fa-facebook-square"></i></a>
+                            </li>
+                            <li><a href="https://twitter.com/gnimullana"><i class="fa fa-twitter-square"></i></a>
+                            </li>
+                            <li><a href="https://www.instagram.com/gnimullana/"><i class="fa fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-inline quicklinks">
+                            <li><a href="#">Developed By:</a>
+                            </li>
+                            <li><a href="073.html">SIMRAN BINDAL</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-      <span style="color:grey">2017 <span style="color:white">Gni,Mullana</span></span>
-      <span style="float-right;margin-left:30px"></span>
-      <a href="https://www.facebook.com/pg/GNI.Ambala/photos/?ref=page_internal"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-       <a href="https://twitter.com/gnimullana"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a href="https://www.instagram.com/gnimullana"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+</footer>
 
-    </footer>
 </body>
 
 
