--- a/sakshidhiman.html
+++ b/sakshidhiman.html
@@ -62,7 +62,7 @@ color: white;
 <body style="background-image:url(assets/img/backfile.jpg)">
 
 
-    <img src="assets/img/sak.jpg" height="200px" width="200px">
+    <img src="assets/img/sakambala.jpg" height="200px" width="200px">
    <h1>SAKSHI DHIMAN</h1>
    <div class="decoration-line">
 
