--- a/sakshisharma.html
+++ b/sakshisharma.html
@@ -61,7 +61,7 @@ color: white;
 <body style="background-image:url(assets/img/backfile.jpg)">
 
 
-  <img src="assets/img/sakshisharma.jpg" height="200px" width="200px">
+  <img src="assets/img/sakjammu.jpg" height="200px" width="200px">
    <h1>SAKSHI SHARMA</h1>
    <div class="decoration-line">
 
@@ -71,7 +71,7 @@ color: white;
    </div>
    <h2>Fathers Name:Mr.Ashok Kumar</h2>
    <h2>Roll_no:6315038</h2>
-   <h2>D.O.B:06-06-19967</h2>
+   <h2>D.O.B:06-06-1996</h2>
    <h2>Home Town:Jammu</h2>
    <p>My aim in life is to become an "Web Designer" </p>
    <h2>Contact_No:8930826599</h2>
