--- a/sadhavi.html
+++ b/sadhavi.html
@@ -62,7 +62,7 @@ color: white;
 <body style="background-image:url(assets/img/backfile.jpg)">
 
 
-  <img src="assets/img/sadhavi.jpg" height="200px" width="200px">
+  <img src="assets/img/sadhavi1.jpg" height="200px" width="200px">
    <h1>SADHAVI BHAT</h1>
    <div class="decoration-line">
 
